--- a/src/styles/_desktop_1200.scss
+++ b/src/styles/_desktop_1200.scss
@@ -1,7 +1,6 @@
 @media (max-width: 1200px) {
   body {
     width: 100%;
-    padding: 0 24px;
   }
 
   .mobile-modal {
@@ -11,12 +10,9 @@
   header {
     width: 100%;
     height: 700px;
-    margin-bottom: 200px;
+    margin:auto;
     box-sizing: border-box;
-    background-image: url(../images/cookie_background.png);
-    background-repeat: no-repeat;
-    background-size: 544px 546px;
-    background-position: center;
+    background: url(../images/cookie_background.png) 54% 10% / 544px 546px no-repeat;
   }
 
   .navbar {
@@ -66,7 +62,6 @@
     height: 48px;
     margin-top: 4%;
     font-size: 15px;
-
     background-image: url(../images/icon_button_learn.png);
     background-repeat: no-repeat;
     background-size: 20px 20px;
@@ -129,12 +124,10 @@
   .product-1 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_1_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -185,7 +178,6 @@
     line-height: normal;
     text-transform: uppercase;
     color: #f9512e;
-
     border: none;
     background-color: transparent;
     display: flex;
@@ -212,7 +204,6 @@
     display: block;
     width: 16px;
     height: 16px;
-
     background-image: url(../images/right_arrow.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -221,12 +212,10 @@
   .product-2 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_2_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -236,7 +225,7 @@
   }
 
   .first_products_row {
-    width: 1112px;
+max-width: 1112px; margin: 0 auto;
     height: 2293px;
     display: flex;
     flex-direction: column;
@@ -260,12 +249,10 @@
   .product-3 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_3_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -277,12 +264,10 @@
   .product-4 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_4_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -302,12 +287,10 @@
   .product-5 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_5_desktop.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -319,12 +302,10 @@
   .product-6 {
     width: 402px;
     height: 512px;
-
     background-image: url(../images/product_6_desktop.png);
     background-size: 402px 530px;
     background-repeat: no-repeat;
     background-position: top center;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -340,10 +321,8 @@
     margin-top: 250px;
     padding: 0 20px;
     gap: 120px;
-
     background-size: 580px 540px;
     background-position: calc(50% + 20px) center;
-
     display: flex;
     flex-direction: column;
   }
@@ -390,7 +369,7 @@
   }
 
   .footer {
-    width: 1200px;
+   width: 100%; max-width: 1200px;
     height: 525px;
     background-color: #1c1a26;
     display: flex;
