--- a/src/styles/_desktop_1440.scss
+++ b/src/styles/_desktop_1440.scss
@@ -1,18 +1,21 @@
 * {
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  background-color: #ffeefc;
-  width: 1440px;
-  height: auto;
+  background: #ffeefc;
+  width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
-  position: relative;
+  font-family: Inter, sans-serif;
+  color: #1c1a26;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-sizing: border-box;
+  min-height: 100vh;
 }
 
 .creative_bakery,
@@ -46,45 +49,29 @@ body {
 }
 
 header {
-  width: 1440px;
+  width: 100%;
   height: 700px;
-  display: flex;
-  flex-direction: column;
-  background-image: url(../images/cookie_background.png);
-  background-repeat: no-repeat;
-  background-size: 584px 586px;
-  background-position: 52% 75%;
+  background: url(../images/cookie_background.png) 50% 35% / 584px 586px
+    no-repeat;
   margin-bottom: 200px;
-  box-sizing: border-box;
 }
 
 .navbar {
-  width: 100%;
   height: 88px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  padding: 1%;
+  align-items: center;
+  padding: 0 1%;
 }
 
 .nav_baker {
   width: 136px;
-  height: 32px;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  display: flex;
 }
 
 .baker_lab {
-  background-image: url(../images/bakerlab_desktop.png);
+  background: url(../images/bakerlab_desktop.png) center/contain no-repeat;
   width: 127px;
   height: 24px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transition: all 0.3s ease;
-  cursor: pointer;
 }
 
 .baker_lab:hover {
@@ -98,18 +85,9 @@ header {
 
 .nav_search {
   width: 499px;
-  height: 32px;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
-  color: #1c1a26;
 }
 
 .about_us,
@@ -140,29 +118,12 @@ header {
 }
 
 .contact_us {
-  font-family: Inter, sans-serif;
+  background: url(../images/icon_phone_desktop.png) left center/18px no-repeat;
+  padding-left: 25px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
   text-transform: uppercase;
   color: #f9512e;
-  cursor: pointer;
-  transition: all 0.3s ease;
   text-decoration: none;
-
-  display: flex;
-  align-items: center;
-  justify-content: end;
-
-  height: 32px;
-  width: 136px;
-  background-image: url(../images/icon_phone_desktop.png);
-  background-repeat: no-repeat;
-  background-size: 18px 18px;
-  background-position: center left;
-  background-color: transparent;
-  border: 0;
 }
 
 .contact_us:hover {
@@ -175,64 +136,37 @@ header {
 }
 
 .container_hero {
-  display: flex;
-  background-size: cover;
-  justify-content: center;
-  height: 700px;
-  width: 1440px;
-  flex-direction: column;
-  align-items: start;
-  gap: 50px;
+  width: 100%;
   padding: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .text_main {
   width: 290px;
-  height: 48px;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
-  color: #1c1a26;
-  text-align: start;
 }
 
 .creative_bakery {
-  width: 1295px;
-  height: 122px;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 144px;
+  font-size: 138px;
   line-height: 85%;
   letter-spacing: -5%;
   text-transform: uppercase;
-  text-align: start;
 }
 
 .learn_more_button {
   width: 280px;
   height: 56px;
-  color: #f9512e;
+
+  border: 2px solid #f9512e;
   border-radius: 32px;
-  border: 2px #f9512e solid;
-  gap: 4px;
-  font-family: Inter, sans-serif;
+  background: url(../images/icon_button_learn.png) 60px center/20px no-repeat;
+  color: #f9512e;
   font-weight: 500;
-  font-style: Medium;
   font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
   text-transform: uppercase;
-  background-color: transparent;
   cursor: pointer;
-  transition: all 0.3s ease;
-  background-image: url(../images/icon_button_learn.png);
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  background-position: 60px;
 }
 
 .learn_more_button:hover {
@@ -289,29 +223,6 @@ header {
   margin-left: 15px;
 }
 
-.product_images-1 {
-  width: 890px;
-  height: 696px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.product-1 {
-  width: 432px;
-  height: 696px;
-  background-image: url(../images/product_1_desktop.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
-  gap: 15px;
-}
-
 .title_product {
   font-family: Inter, sans-serif;
   font-weight: 500;
@@ -346,23 +257,17 @@ header {
 }
 
 .order_button {
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  text-transform: uppercase;
   width: 120px;
   height: 32px;
-  color: #f9512e;
+  background: transparent;
   border: none;
+  color: #f9512e;
+  font-weight: 500;
+  text-transform: uppercase;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  padding: 0 8px;
   gap: 8px;
   cursor: pointer;
-  position: relative;
-  background-color: transparent;
-  transition: all 0.2s ease;
 }
 
 .order_button:hover {
@@ -376,189 +281,131 @@ header {
 
 .order_button::before {
   content: '';
-  display: block;
   width: 16px;
   height: 16px;
-  background-image: url(../images/right_arrow.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.product-2 {
-  width: 432px;
-  height: 696px;
-  background-image: url(../images/product_2_desktop.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
-  gap: 15px;
+  background: url(../images/right_arrow.png) center/contain no-repeat;
 }
 
 .first_products_row {
   width: 1192px;
-  height: 2437px;
   display: flex;
   flex-direction: column;
   gap: 75px;
-  overflow: hidden;
-  justify-content: flex-start;
-  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-.product_images-2 {
-  width: 890px;
-  height: 696px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  max-width: 100%;
-  box-sizing: border-box;
-  margin-left: 300px;
-}
-
-.product-3 {
-  width: 432px;
-  height: 696px;
-  background-image: url(../images/product_3_desktop.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
-  gap: 15px;
-}
-
-.product-4 {
-  width: 432px;
-  height: 696px;
-  background-image: url(../images/product_4_desktop.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
-  gap: 15px;
-}
-
+.product_images-1,
+.product_images-2,
 .product_images-3 {
   width: 890px;
-  height: 696px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  max-width: 100%;
-  box-sizing: border-box;
-}
-
-.product-5 {
-  width: 432px;
-  height: 696px;
-  background-image: url(../images/product_5_desktop.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: top center;
-  display: flex;
-  flex-direction: column;
   justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
-  gap: 15px;
+  gap: 26px;
 }
 
+/* ESQUERDA: product-1, product-5 */
+.product_images-1,
+.product_images-3 {
+  margin-left: 0;
+}
+
+/* DIREITA: product-3 e product-4 → empurra o segundo item para a direita */
+.product_images-2 {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+/* Produtos individuais */
+.product-1,
+.product-2,
+.product-3,
+.product-4,
+.product-5,
 .product-6 {
   width: 432px;
   height: 696px;
-  background-image: url(../images/product_6_desktop.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top center;
+  padding-top: 575px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding-top: 575px;
-  box-sizing: border-box;
   gap: 15px;
+}
+
+.product-1 {
+  background-image: url(../images/product_1_desktop.png);
+}
+
+.product-2 {
+  background-image: url(../images/product_2_desktop.png);
+}
+
+.product-3 {
+  background-image: url(../images/product_3_desktop.png);
+}
+
+.product-4 {
+  background-image: url(../images/product_4_desktop.png);
+}
+
+.product-5 {
+  background-image: url(../images/product_5_desktop.png);
+}
+
+.product-6 {
+  background-image: url(../images/product_6_desktop.png);
 }
 
 .information_about_us {
   width: 1192px;
-  height: 673px;
-  margin-top: 350px;
+  margin: 350px auto 0;
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
   gap: 175px;
-  background-image: url(../images/about_us_background_desktop.png);
-  background-size: 718px 673px;
-  background-position: calc(50% + 30px) center;
+  padding-bottom: 350px;
+  background: url(../images/about_us_background_desktop.png) calc(50% + 30px)
+    center / 718px 673px no-repeat;
 }
 
 .about {
-  width: 1192px;
-  height: 122px;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .few_words {
-  width: 584px;
-  height: 122px;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 72px;
   line-height: 85%;
   letter-spacing: -5%;
   text-transform: uppercase;
+  width: 50%;
 }
 
 .words {
-  width: 584px;
-  height: 120px;
-  font-family: Inter, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 16px;
-
   line-height: 150%;
   letter-spacing: -1%;
+  width: 50%;
 }
 
 .stats {
-  width: 1192px;
-  height: 114px;
   display: flex;
-  flex-direction: row;
-  box-sizing: border-box;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .stores,
 .companies,
 .clients,
 .year {
-  width: 280px;
-  height: 114px;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 96px;
   line-height: 85%;
   letter-spacing: -5%;
   text-transform: uppercase;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
 }
 
 .stats_description {
@@ -571,70 +418,70 @@ header {
   color: #7f8096;
 }
 
+// _base.scss → FOOTER
 .footer {
-  width: 1440px;
+  width: 100%;
   height: 525px;
+  background: #1c1a26;
+  color: white;
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-around;
-  background-color: #1c1a26;
+  align-items: flex-start;
+  padding: 60px 80px;
+  gap: 40px;
 }
 
+/* ====== ESQUERDA: LOGO + MENU + SOCIAL ====== */
 .bakerlab {
-  height: 350px;
   width: 280px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 45px;
+  gap: 55px;
 }
 
 .bakerlab_logo {
-  background-image: url(../images/bakerlab_logo.png);
+  background: url(../images/bakerlab_logo.png) center/contain no-repeat;
   width: 157px;
   height: 30px;
 }
 
 .menu_items {
   width: 160px;
-  height: 176px;
   display: flex;
   flex-direction: column;
-  align-items: start;
-  text-align: end;
+  align-items: flex-start;
   gap: 15px;
-  color: #fff;
   margin-top: 30px;
 }
 
 .menu {
-  font-family: Inter, sans-serif;
   font-weight: 500;
-  font-style: Medium;
   font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
   text-transform: uppercase;
   color: #7f8096;
 }
 
 .menu-item {
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
+  color: white;
 }
 
 .social_buttons {
   display: flex;
-  flex-direction: row;
+  justify-content: space-evenly;
   width: 260px;
   height: 24px;
-  align-items: center;
-  justify-content: space-evenly;
+}
+
+.facebook,
+.instagram,
+.X {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  transition: transform 0.1s, filter 0.2s;
 }
 
 .facebook {
@@ -655,18 +502,6 @@ header {
   background-image: url(../images/X_icon_desktop.png);
 }
 
-.facebook,
-.instagram,
-.X {
-  transition:
-    transform 0.1s,
-    filter 0.2s;
-  cursor: pointer;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
 .facebook:hover,
 .instagram:hover,
 .X:hover {
@@ -681,28 +516,17 @@ header {
   transform: scale(0.95);
 }
 
-.facebook:focus,
-.instagram:focus,
-.X:focus {
-  filter: brightness(0) invert(1);
-  transform: scale(1.1);
-  outline: none;
-}
-
+/* ====== DIREITA: CONTACT US + INFO ====== */
 .contact_us_footer {
-  width: 584px;
-  height: 350px;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   font-size: 72px;
   line-height: 85%;
   letter-spacing: -5%;
   text-transform: uppercase;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 45px;
+  gap: 30px;
+  height: 200px;
   box-sizing: border-box;
 }
 
@@ -710,68 +534,31 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: start;
+  width: 100%;
+  max-width: 520px;
+  box-sizing: border-box;
 }
 
-.call_us {
-  font-family: Inter, sans-serif;
+.call_us,
+.email_us {
   font-weight: 500;
-  font-style: Medium;
   font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
   text-transform: uppercase;
   color: #7f8096;
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
 }
 
-.phone {
+.phone,
+.email {
   display: flex;
   flex-direction: column;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
+  gap: 15px;
+  line-height: 1.2;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
   color: white;
-  gap: 10px;
 }
 
 .copyright {
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
   color: #7f8096;
-  margin-top: 55px;
-}
-
-.email_us {
-  display: flex;
-  flex-direction: column;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  font-style: Medium;
-  font-size: 16px;
-  line-height: 100%;
-  letter-spacing: 2%;
-  text-transform: uppercase;
-  color: #7f8096;
-  width: 260px;
-  gap: 10px;
-}
-
-.email {
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: -1%;
-  color: white;
+  margin-top: 30px;
 }
