--- a/src/styles/_tablet_768.scss
+++ b/src/styles/_tablet_768.scss
@@ -5,6 +5,9 @@
     padding: 0;
     width: 100%;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    height: auto;
   }
 
   header {
@@ -197,49 +200,56 @@
 
   .container_hero {
     width: 100%;
-    height: 600px;
-    padding: 80px 40px;
-    gap: 80px;
+    height: 700px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;   /* ← controla espaçamento vertical */                 /* ← espaçamento natural entre itens */
+    text-align: left;
+    box-sizing: border-box;
+
   }
 
+  /* ===== TEXTO PRINCIPAL: ESQUERDA ===== */
   .text_main {
     width: 290px;
-    height: 48px;
     font-size: 16px;
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-style: Regular;
     line-height: 150%;
     letter-spacing: -1%;
-    margin-right: 55vw;
+    margin: 0;
+    align-self: flex-start;        /* ← ALINHA À ESQUERDA */
   }
 
+  /* ===== TÍTULO: CENTRO ===== */
   .creative_bakery {
-    width: 720px;
-    height: 116px;
-
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    font-style: Regular;
-    font-size: 80px;
+    width: 100%;
+    max-width: 720px;
+    font-size: 76px;
     line-height: 85%;
     letter-spacing: -5%;
-    text-align: center;
-    text-transform: uppercase;
+    text-transform: uppercase;             /* ← CENTRALIZA HORIZONTALMENTE */
+    text-align: start;
+    align-self: center;            /* ← reforça no flex */
   }
 
+  /* ===== BOTÃO: CENTRO ===== */
   .learn_more_button {
     width: 326px;
-    height: 56px;
+    height: 56px !important;
     font-size: 16px;
-    margin-top: 4%;
-    background-image: url(../images/icon_button_learn.png);
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    background-position: 80px;
-    background-color: transparent;
+    margin: 0 auto;                /* ← CENTRALIZA */
+    background: url(../images/icon_button_learn.png) 80px center / 20px 20px no-repeat;
+    border: 2px solid #f9512e;
+    border-radius: 32px;
+    color: #f9512e;
+    font-weight: 500;
+    text-transform: uppercase;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 60px;
+    box-sizing: border-box;
+
   }
 
   .title_product_main {
@@ -271,15 +281,6 @@
     text-transform: uppercase;
     color: #7f8096;
     margin-top: 20px;
-  }
-
-  .product_images-1 {
-    width: 680px;
-    height: 560px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 10px;
   }
 
   .description_products-1 {
@@ -342,15 +343,11 @@
   }
 
   .first_products_row {
-    width: 680px;
-    height: 2050px;
-
+    width: 100%;
+    max-width: 680px;
+    margin: auto;
     display: flex;
     flex-direction: column;
-    gap: 70px;
-    overflow: hidden;
-    justify-content: flex;
-    box-sizing: border-box;
   }
   .product-1 {
     width: 328px;
@@ -381,15 +378,6 @@
     box-sizing: border-box;
     gap: 15px;
   }
-  .product_images-2 {
-    width: 680px;
-    height: 500px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 10px;
-    transform: translateX(-300px);
-  }
 
   .product-3 {
     width: 328px;
@@ -419,14 +407,16 @@
     box-sizing: border-box;
   }
 
+  .product_images-1,
+  .product_images-2,
   .product_images-3 {
-    width: 680px;
-    height: 700px;
+    width: 100%;
+    max-width: 680px;
+    margin: 0 auto;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    gap: 10px;
   }
-
   .product-5 {
     width: 328px;
     height: 424px;
@@ -437,7 +427,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 530px;
     box-sizing: border-box;
   }
 
@@ -493,6 +482,7 @@
     height: 216px;
     display: flex;
     flex-direction: row;
+    align-items: start;
   }
 
   .few_words {
@@ -505,6 +495,7 @@
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
+
   }
 
   .words {
@@ -525,6 +516,7 @@
     justify-content: space-between;
     align-items: flex-start;
     text-align: start;
+
   }
 
   .stores,
@@ -551,26 +543,27 @@
   }
 
   .footer {
-    width: 768px;
-    height: 616px;
-
+    width: 100vw;
+    height: 560px;
+    max-width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    padding: 60px 40px;
+    background: #1c1a26;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #1c1a26;
-    margin-top: 25%;
+    box-sizing: border-box;
+    margin-top: 150px;
   }
 
   .bakerlab {
-    height: 550px;
     width: 280px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: url(../images/bakerlab_logo.png);
     background-repeat: no-repeat;
-    background-position: 56% 10%;
+    background-position: 56% 0%;
+    margin-bottom: 100px;
   }
 
   .bakerlab_logo {
@@ -581,8 +574,7 @@
 
   .menu_items {
     width: 140px;
-    gap: 18px;
-    margin-top: 190px;
+    margin-top: 125px;
   }
 
   .menu {
@@ -595,48 +587,63 @@
 
   .social_buttons {
     width: 220px;
-    margin-top: 92px;
+    margin-top: 60px;
+
   }
 
   .contact_us_footer {
     width: 328px;
-    height: 450px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;                    /* ← ESPAÇO ENTRE SEÇÕES */
     font-family: Inter, sans-serif;
     font-weight: 400;
-    font-style: Regular;
     font-size: 56px;
     line-height: 85%;
     letter-spacing: -5%;
     text-transform: uppercase;
-
     color: white;
-    display: flex;
-    flex-direction: column;
-
-    box-sizing: border-box;
+    margin-bottom: 100px;
   }
 
   .informations {
     width: 100%;
+    display: flex;
     flex-direction: column;
-    gap: 45px;
+    gap: 16px;                    /* ← ESPAÇO ENTRE "CALL" E "EMAIL" */
   }
 
-  .call_us,
-  .email_us {
-    width: 100%;
-    max-width: 260px;
+  .call_us{
     font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #7f8096;
+    margin: 0;
   }
-
-  .phone,
+  .email_us {
+    font-size: 15px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #7f8096;
+    margin-top: 30px;
+  }
+  .phone{
+    font-size: 15px;
+    color: white;
+    line-height: 1.3;
+    margin: 4px 0 0;
+    width: auto;
+  }
   .email {
     font-size: 15px;
-    width: 328px;
+    color: white;
+    line-height: 1.3;
+    width: auto;
   }
 
   .copyright {
-    margin-top: 25px;
     font-size: 15px;
+    color: #7f8096;
+    margin-top: 15px;              /* ← SÓ 8px do email */
   }
 }
